# noteserver

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
examples/: ExampleMarkdown.md
scripts/: noteadmin.py
src/: actions.rs  auth.rs  config.rs  main.rs  rendering.rs  styling.rs  utils.rs
