[package]
name = "noteserver"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "noteserver"

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
markdown = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
time = "0.3.47"
